--- a/app/index.html
+++ b/app/index.html
@@ -139,14 +139,13 @@
 			      <h3 class="testimonial-title">6 Time Escaper</h3>
 			      <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
 			  </div>
-		  </div>
-      </div>
-	  
-
+		 </div>
+       </div>
+     </div>
   </div>
 
-  <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn-orange">Get in Touch</a></p>
+  <footer class="site-footer">
+    <div class="wrapper"><p><span class="site-footer-text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span><a href="#" class="btn btn-orange">Get in Touch</a></p></div>
   </footer>
 </body>
 </html>
